hugr-llvm/src/extension/snapshots/hugr_llvm__extension__collections__test__get@llvm14.snap
---
source: hugr-llvm/src/extension/collections.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {}, { i16 } } @_hl.main.1(i8* %0, i64 %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = alloca i16, align 2
  %3 = bitcast i16* %2 to i8*
  %4 = call i1 @__rt__list__get(i8* %0, i64 %1, i8* %3)
  %5 = bitcast i8* %3 to i16*
  %6 = load i16, i16* %5, align 2
  %7 = insertvalue { i16 } undef, i16 %6, 0
  %8 = insertvalue { i32, {}, { i16 } } { i32 1, {} poison, { i16 } poison }, { i16 } %7, 2
  %9 = select i1 %4, { i32, {}, { i16 } } %8, { i32, {}, { i16 } } { i32 0, {} undef, { i16 } poison }
  ret { i32, {}, { i16 } } %9
}

declare i1 @__rt__list__get(i8*, i64, i8*)
