hugr-llvm/src/extension/snapshots/hugr_llvm__extension__collections__test__insert@llvm14.snap
---
source: hugr-llvm/src/extension/collections.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i8*, { i32, { i16 }, { { {} } } } } @_hl.main.1(i8* %0, i64 %1, i16 %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %3 = alloca i16, align 2
  store i16 %2, i16* %3, align 2
  %4 = bitcast i16* %3 to i8*
  %5 = call i1 @__rt__list__insert(i8* %0, i64 %1, i8* %4)
  %6 = insertvalue { i16 } undef, i16 %2, 0
  %7 = insertvalue { i32, { i16 }, { { {} } } } { i32 0, { i16 } poison, { { {} } } poison }, { i16 } %6, 1
  %8 = select i1 %5, { i32, { i16 }, { { {} } } } { i32 1, { i16 } poison, { { {} } } undef }, { i32, { i16 }, { { {} } } } %7
  %mrv = insertvalue { i8*, { i32, { i16 }, { { {} } } } } undef, i8* %0, 0
  %mrv8 = insertvalue { i8*, { i32, { i16 }, { { {} } } } } %mrv, { i32, { i16 }, { { {} } } } %8, 1
  ret { i8*, { i32, { i16 }, { { {} } } } } %mrv8
}

declare i1 @__rt__list__insert(i8*, i64, i8*)
