hugr-llvm/src/extension/snapshots/hugr_llvm__extension__collections__test__insert@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/collections.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i8*, { i32, { i16 }, { { {} } } } } @_hl.main.1(i8* %0, i64 %1, i16 %2) {
alloca_block:
  %"0" = alloca i8*, align 8
  %"1" = alloca { i32, { i16 }, { { {} } } }, align 8
  %"2_0" = alloca i8*, align 8
  %"2_1" = alloca i64, align 8
  %"2_2" = alloca i16, align 2
  %"4_0" = alloca i8*, align 8
  %"4_1" = alloca { i32, { i16 }, { { {} } } }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8* %0, i8** %"2_0", align 8
  store i64 %1, i64* %"2_1", align 4
  store i16 %2, i16* %"2_2", align 2
  %"2_01" = load i8*, i8** %"2_0", align 8
  %"2_12" = load i64, i64* %"2_1", align 4
  %"2_23" = load i16, i16* %"2_2", align 2
  %3 = alloca i16, align 2
  store i16 %"2_23", i16* %3, align 2
  %4 = bitcast i16* %3 to i8*
  %5 = call i1 @__rt__list__insert(i8* %"2_01", i64 %"2_12", i8* %4)
  %6 = insertvalue { i16 } undef, i16 %"2_23", 0
  %7 = insertvalue { i32, { i16 }, { { {} } } } { i32 0, { i16 } poison, { { {} } } poison }, { i16 } %6, 1
  %8 = select i1 %5, { i32, { i16 }, { { {} } } } { i32 1, { i16 } poison, { { {} } } undef }, { i32, { i16 }, { { {} } } } %7
  store i8* %"2_01", i8** %"4_0", align 8
  store { i32, { i16 }, { { {} } } } %8, { i32, { i16 }, { { {} } } }* %"4_1", align 4
  %"4_04" = load i8*, i8** %"4_0", align 8
  %"4_15" = load { i32, { i16 }, { { {} } } }, { i32, { i16 }, { { {} } } }* %"4_1", align 4
  store i8* %"4_04", i8** %"0", align 8
  store { i32, { i16 }, { { {} } } } %"4_15", { i32, { i16 }, { { {} } } }* %"1", align 4
  %"06" = load i8*, i8** %"0", align 8
  %"17" = load { i32, { i16 }, { { {} } } }, { i32, { i16 }, { { {} } } }* %"1", align 4
  %mrv = insertvalue { i8*, { i32, { i16 }, { { {} } } } } undef, i8* %"06", 0
  %mrv8 = insertvalue { i8*, { i32, { i16 }, { { {} } } } } %mrv, { i32, { i16 }, { { {} } } } %"17", 1
  ret { i8*, { i32, { i16 }, { { {} } } } } %mrv8
}

declare i1 @__rt__list__insert(i8*, i64, i8*)
